--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
     <head>
+        <title>For Jen</title>
         <script src = "phaser.min.js"></script>
         <script src = "main.js"></script>
     </head>
     
     <body>
-
+        <p>Jeeeeeen, I need lovin!
+        <br>Collect hearts to give me extra love!</p>
     </body>
 </html>
